Sat Aug  3 00:12:00 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* NEWS: Add the description that IO#seek supports SEEK_DATA
	  and SEEK_HOLE.

Fri Aug  2 23:57:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm.c (m_core_define_method, m_core_define_singleton_method): now
	  the value of def-expr is the Symbol of the name of the method, not
	  nil.
	  ref. [ruby-dev:42151] [Feature #3753]

	* test/ruby/test_syntax.rb (TestSyntax#test_value_of_def): test for
	  above changes.

Fri Aug  2 23:54:11 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): performance improvement by avoiding
	  array creation if rb_block_arity() > 1.

Fri Aug  2 23:50:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Appry bigtrunc to the result of
	  bigsq.
	  (big2str_karatsuba): Fix number of leading zero characters.

Fri Aug  2 23:48:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): calculate denominator directly as powers of
	  ten, not parsing string.

	* parse.y (parser_number_literal_suffix): return bit set of found
	  suffixes.

	* parse.y (parser_set_number_literal, parser_set_integer_literal):
	  split from parser_number_literal_suffix to set yyvlal.

	* parse.y (parser_yylex): parse rational number literal with decimal
	  point precisely.

	* parse.y (simple_numeric): integrate numeric literals and simplify
	  numeric rules.

	* ext/ripper/eventids2.c (ripper_init_eventids2): ripper support for
	  new literals, tRATIONAL and tIMAGINARY.

Fri Aug  2 18:33:28 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Reduce power_level more than one at
	  recursion, if possible.
	  (rb_big2str1): Follow the above change.

Fri Aug  2 12:25:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Swap x and y for bary_mul1 if x is longer than y.
	  [ruby-dev:47565] [Bug #8719] Reported by Narihiro Nakamura.

Fri Aug  2 10:39:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
